--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,3 +74,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+  assets:
+    - assets/images/
+#   - images/a_dot_burr.jpeg
+#   - images/a_dot_ham.jpeg
