--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,3 +79,11 @@ flutter:
     - assets/images/
 #   - images/a_dot_burr.jpeg
 #   - images/a_dot_ham.jpeg
+
+  fonts:
+   - family: Montserrat
+     fonts:
+       - asset: assets/fonts/Montserrat-Regular.ttf
+#       - asset: fonts/Schyler-Italic.ttf
+#         style: italic
+#   - family: Trajan Pro
